<resources>
    <string name="app_name">Login</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="account_prompt">To/from account</string>
    <string name="category_prompt">Select category</string>
    <string name="back_icon">Back Icon</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="enter_amount">Enter amount</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="save_this_transaction">Save this transaction</string>
    <string name="add_note">Add note</string>
    <string name="choose_day">Choose day</string>
</resources>