<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransactionActivity"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">


<!-- "Add Transaction" with Back Icon -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginBottom="80dp"
    android:background="@color/background">

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/back_icon"
        android:padding="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="8dp"/>
</LinearLayout>

<!-- To/From Account Spinner -->
<Spinner
    android:id="@+id/account_spinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/spinner_item_selector"
    android:layout_marginBottom="10dp"
    android:popupBackground="@color/background"
    android:prompt="@string/account_prompt" />

<!-- Divider -->
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/white"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="16dp"/>

<!-- Enter Amount EditText -->
<EditText
    android:id="@+id/editTextAmount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="Hello"
    android:minHeight="48dp"
    android:background="@color/background"
    android:textColor="@color/white"
    android:hint="@string/enter_amount"
    android:textColorHint="@color/white"
    android:inputType="numberDecimal"
    android:padding="8dp"
    android:layout_marginStart="4dp"
    android:drawableEnd="@drawable/ic_enteramount"/>

<!-- Divider -->
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/white"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="16dp"/>

<!-- Select Category Spinner -->
<Spinner
    android:id="@+id/category_spinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp"
    android:background="@drawable/spinner_item_selector"
    android:popupBackground="@color/background"
    android:prompt="@string/category_prompt"
    />

<!-- Divider -->
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/white"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="16dp"/>

<!-- Add Note EditText -->
<EditText
    android:id="@+id/editTextNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:minHeight="48dp"
    android:background="@color/background"
    android:textColor="@color/white"
    android:hint="@string/add_note"
    android:textColorHint="@color/white"
    android:textSize="16sp"
    android:inputType="textCapSentences"
    android:padding="12dp"
    android:layout_marginStart="4dp"
    android:drawableEnd="@drawable/ic_addnote"/>

<!-- Divider -->
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/white"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="16dp"/>

<!-- Choose Day Button -->
<Button
    android:id="@+id/choose_day_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:text="@string/choose_day"
    android:textSize="16sp"
    android:textColor="@color/white"
    android:padding="12dp"
    android:layout_marginTop="16dp"
    android:drawableEnd="@drawable/ic_calendar"
    android:gravity="start|center_vertical" />

<!-- Divider -->
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/white"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="16dp"/>

<!-- Income/Expense Checkboxes -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingTop="16dp"
    android:paddingBottom="8dp"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="30dp"/>

        <CheckBox
            android:id="@+id/checkBoxIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:buttonTint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="30dp"/>

        <CheckBox
            android:id="@+id/checkBoxExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:buttonTint="@color/white"/>
    </LinearLayout>

</LinearLayout>

<!-- Save Button -->
<Button
    android:id="@+id/save_transaction_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/save_this_transaction"
    android:textAllCaps="false"
    android:textColor="@color/black"
    android:backgroundTint="@color/buttonColor"
    android:textSize="18sp"
    android:padding="16dp"
    android:layout_marginTop="24dp"
    android:layout_gravity="center"
    android:drawableEnd="@drawable/ic_savethistransaction"/>
</LinearLayout>